# ayaka_games

./: .gitignore  build.py  build_24.py  mkdocs.yml  pyproject.toml  readme.md  requirements.txt  res_info.json  run.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  new_game.md
ayaka_games/: __init__.py  bag.py  calculate.py  checkin.py  cy_query.py  data.py  dragon.py  genshin_random_event.py  get_30.py  incan.py  mana.py  plus_one.py  pray.py  requirements.txt  utils.py  who_is_suspect.py  word_tax.py
ayaka_games/bag/: __init__.py  bag.py  reputation.py
ayaka_games/calculate/: __init__.py  calculate.py  reputation.py
ayaka_games/checkin/: __init__.py  checkin.py  reputation.py
ayaka_games/pray/: __init__.py  pray.py  reputation.py
ayaka_games/reputation/: __init__.py  bag.py  checkin.py  reputation.py
ayaka_games/utils/: __init__.py  config.py  database.py  download.py  reputation.py  subscribe.py
data/ayaka_games/: 原神随机事件.json  成语词典.json  文字税.txt  谁是卧底.txt
data/ayaka_games/24点/: 24.json  48.json
data/ayaka_games/接龙/: 原神.txt  成语.txt
docs/: 404.html  index.html  sitemap.xml
docs/config/: index.html
docs/help/: index.html
docs/install/: index.html
docs/load/: index.html
docs/search/: search_index.json
script/: 0.txt  0_output.txt  1.txt  bag.txt  calc.txt  dragon.txt  get30.txt  inca.txt  mana.txt  plus.txt  pray.txt  query.txt  suspect.txt  tax.txt
website/: config.md  help.md  index.md  install.md  load.md
website/css/: demo.css
website/js/: demo.js
